--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,9 +10,20 @@ spring:
     url: jdbc:mysql://localhost/ordersystem?useSSL=FALSE&serverTimezone=UTC&charaterEncoding=utf8
     username: root
     password: 123456
+  servlet:
+    multipart:
+      # 设置单个文件最大内存
+      max-file-size: 50MB
+      # 设置所有文件最大内存
+      max-request-size: 50MB
+      enabled: true
 
 #mybatis-plus
 mybatis-plus:
   mapper-locations: classpath:mapper/*.xml
   typeAliasesPackage: com.groupthree.ordersystem.entity
   log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+# 自定义文件上传路径
+web:
+  upload-path: E:/Develop/Files/Photos/
