--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost/ordersystem?useSSL=FALSE&serverTimezone=UTC&charaterEncoding=utf8
+    url: jdbc:mysql://localhost/ordersystem?useSSL=FALSE&serverTimezone=Asia/Shanghai&charaterEncoding=utf8
     username: root
     password: 123456
   servlet:
